[tool.poetry]
name = "watchpoint-discord"
version = "0.1.2"
description = ""
authors = ["Chad Fernandez <contact@chadfernandez.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.1"
discord-py = "^2.3.2"
python-dotenv = "^1.0.0"
commitizen = "^3.13.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
post_bump_hooks = ["git push","git push origin $CZ_POST_CURRENT_TAG_VERSION"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
